# trstctl

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  NHI-Platform-PRD-v0.5.md  README.md  SECURITY.md  buf.yaml  certctl-Sprint-Plan.md  go.mod  go.sum  mkdocs.yml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  branch-protection.json  dependabot.yml
clients/sdk/python/: README.md  pyproject.toml
clients/sdk/python/scripts/: gen_types.py
clients/sdk/python/src/trstctl_sdk/: __init__.py  client.py  types.py
clients/sdk/python/tests/: test_client.py
deploy/: deploycheck_test.go  doc.go
docs/: .gitkeep  agent_channel_docs_test.go  airgap.md  audit-finding-ownership.md  branch-protection.md  branch_protection_test.go  cli.md  codeowners_test.go  compliance.md  configuration.md  coverage_test.go  dependency_freshness_test.go  disaster-recovery.md  doc.go  docs_drift_test.go  docs_test.go  editions.md  embedded_console_bundle_test.go  enroll_routes_test.go  est_differential_test.go  feature_served_state_test.go  features.md  features.tsv  frontend_openapi_contract_test.go  getting-started.md  glossary.md  i18n.md  idempotency_claims_test.go  index.md  install.md  limitations.md  migrations.md  observability.md  oidc_runbooks_test.go  operational_transfer_test.go  operations.md  parity_surface_docs_test.go  performance-capacity.md  performance.md  performance_test.go  (+15 more)
ee/: README.md  doc.go
plugins/: README.md
scripts/: airgap-bundle.sh  gen-sdk.sh  (+2 more)
(+1675 files in other folders)
